# mikrotik-dns-operator

./: .dockerignore  .env.example  Dockerfile  README.md  mikrotik-dns-operator.cue  pyproject.toml
helm/: Chart.yaml  values.yaml
helm/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  secret.yaml  serviceaccount.yaml
src/: operator.py
src/configuration/: config.py  config_test.py
src/mikrotik/: __init__.py  mikrotik.py
tests/: ingress-multiple-hosts.yaml  ingress-no-annotation.yaml  ingress-single-host.yaml  ingress.yaml
