[tool.poetry]
name = "mikrotik-dns-operator"
version = "0.1.0"
description = ""
authors = ["Sebastian Hutter <mail@sebastian-hutter.ch>"]

[tool.poetry.dependencies]
python = "^3.8"
kopf = "^1.35.3"
paramiko = "^2.9.2"
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
